Small UI tweaks

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="http://diegoddox.github.io/react-redux-toastr/4.4/react-redux-toastr.min.css" rel="stylesheet" type="text/css">
   </head>
 
-  <body>
+  <body style="margin: 0;">
     <!-- Starting point for React app -->
     <div id="app"></div>
 
